Fixed overlapping divs on screen collapse

--- a/projects/projects.css
+++ b/projects/projects.css
@@ -66,27 +66,33 @@ h1 {
 .projectDetails {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 350px;
+    grid-template-rows: 400px;
     margin-bottom: 5px;
 
 }
 
-.ffaGif {
-    height:auto;
-    max-width:94%;
+.projectDesc {
     display: flex;
     justify-content: center;
+    display: block;
+}
+
+.ffaGif {
+    height: auto;
+    max-width:94%;
     border:solid;
     border-width: 10px;
     border-color:  #191970;
     border-radius: 10px;
     padding: 5px;
     margin-bottom: 3px;
+    display: flex;
+    justify-content: center;
 }
 
 /* Media Queries */
 @media (max-width: 800px) {
-    .projectDetails {
+    .main_section {
       flex-direction: column;
       padding: 30px;
     }
@@ -95,25 +101,26 @@ h1 {
         grid-template-columns: 1fr;
         padding: 30px;
     }
+
+    #ffaGif {
+        padding-top: 200px;
+    }
   }
 
-.projectDescHeader {
-    font-size: 20px;
-    color: #191970;
-    padding: 20px;
- 
-}
 
 .descriptionHeader {
     font-size: 27px;
     color: #191970;
+    padding: 20px;
 }
 
 
 p {
     font-size: 20px;
     color: #191970;
+    padding: 20px;
 }
+
 @media (max-width: 900px) {
     .projectContainer{
     flex-direction: column;
